textAlign fixed

--- a/src/component/css/Information.module.css
+++ b/src/component/css/Information.module.css
@@ -21,6 +21,7 @@
   display: grid;
   grid-template-rows: repeat(3, min-content);
   justify-items: center;
+  text-align: center;
 }
 .textBottom {
   font-size: 1.4rem;
